--- a/index.html
+++ b/index.html
@@ -3,47 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>¿Debo Declarar Renta? | MG Esp CP Mario Andrés Narváez Delgado</title>
+  <title>¿Debo Declarar Renta 2026? | MG Esp CP Mario Andrés Narváez Delgado</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>📊 ¿Debes Declarar Renta en Colombia? (2025)</h1>
-    <p><strong>Año gravable:</strong> 2024 | <strong>Topes DIAN 2025</strong></p>
+    <h1>📊 ¿Debes Declarar Renta en Colombia? (2026)</h1>
+    <p><strong>Año gravable:</strong> 2025 | <strong>Topes DIAN 2026</strong></p>
     
     <form id="rentaForm">
       <div class="input-group">
-        <label>1. Patrimonio bruto al 31/12/2024 ($)</label>
-        <input type="number" id="patrimonio" placeholder="Ej: 250000000" required>
-      </div>
-
-      <div class="input-group">
-        <label>2. Ingresos totales en 2024 ($)</label>
-        <input type="number" id="ingresos" placeholder="Ej: 70000000" required>
-      </div>
-
-      <div class="input-group">
-        <label>3. Consumos con tarjeta de crédito ($)</label>
-        <input type="number" id="consumosTC" placeholder="Ej: 30000000" required>
-      </div>
-
-      <div class="input-group">
-        <label>4. Depósitos/inversiones financieras ($)</label>
-        <input type="number" id="depositos" placeholder="Ej: 20000000" required>
-      </div>
-
-      <div class="input-group">
-        <label>5. Compras y consumos (sin TC) ($)</label>
-        <input type="number" id="compras" placeholder="Ej: 10000000" required>
-      </div>
-
-      <div class="input-group">
-        <label>6. ¿Eres responsable de IVA?</label>
+        <label>1. ¿Eres responsable del IVA? <span title="Obligado a facturar con IVA">ℹ️</span></label>
         <select id="responsableIVA" required>
           <option value="">Selecciona...</option>
           <option value="si">Sí</option>
           <option value="no">No</option>
         </select>
+      </div>
+
+      <div class="input-group">
+        <label>2. Patrimonio bruto al 31/12/2025 ($)</label>
+        <input type="number" id="patrimonio" placeholder="Ej: 224095000" required>
+        <small>UVT 2025: $49.798 x 4.500 = $224.095.000</small>
+      </div>
+
+      <div class="input-group">
+        <label>3. Ingresos brutos en 2025 ($)</label>
+        <input type="number" id="ingresos" placeholder="Ej: 69718600" required>
+        <small>UVT 2025: $49.798 x 1.400 = $69.718.600</small>
+      </div>
+
+      <div class="input-group">
+        <label>4. Consumos con tarjeta de crédito ($)</label>
+        <input type="number" id="consumosTC" placeholder="Ej: 50000000" required>
+      </div>
+
+      <div class="input-group">
+        <label>5. Compras y consumos (sin TC) ($)</label>
+        <input type="number" id="compras" placeholder="Ej: 30000000" required>
+      </div>
+
+      <div class="input-group">
+        <label>6. Consignaciones/depósitos/inversiones ($)</label>
+        <input type="number" id="depositos" placeholder="Ej: 20000000" required>
       </div>
 
       <div class="input-group">
