--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <form id="rentaForm">
       <div class="input-group">
-        <label>1. ¿Eres responsable del IVA? <span title="Obligado a facturar con IVA">ℹ️</span></label>
+        <label>1. ¿Eres responsable del IVA?</label>
         <select id="responsableIVA" required>
           <option value="">Selecciona...</option>
           <option value="si">Sí</option>
@@ -68,7 +68,7 @@
   </footer>
 
   <!-- jsPDF CDN -->
-  <<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
