Update jsPDF script references in index.html

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <img src="logo.png" alt="Logo Contador" style="height: 50px;">
   </footer>
 
-  <!-- jsPDF CDN -->
-<script src="jspdf.min.js"></script>
-   <script src="script.js"></script>
+  <!-- jsPDF local (descarga el archivo desde https://cdnjs.com/libraries/jspdf) -->
+  <script src="jspdf.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
