--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </footer>
 
   <!-- jsPDF desde GitHub Raw (¡Ajusta TU-USUARIO!) -->
-  <script src="https://raw.githubusercontent.com/mariosand2026/consulta-declaracion-renta/main/jspdf.min.js"></script>
+  <script src="jspdf.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
