--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>¿Debo Declarar Renta 2026? | MG Esp CP Mario Andrés Narváez Delgado</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://mariosand2026.github.io/consulta-declaracion-renta/style.css">
 </head>
 <body>
   <div class="container">
@@ -27,7 +27,7 @@
   </footer>
 
   <!-- jsPDF desde GitHub Raw (¡Ajusta TU-USUARIO!) -->
-  <script src="jspdf.min.js"></script>
-  <script src="script.js"></script>
+  <<script src="https://mariosand2026.github.io/consulta-declaracion-renta/jspdf.min.js"></script>
+  <script src="https://mariosand2026.github.io/consulta-declaracion-renta/script.js"></script>
 </body>
 </html>
