--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>¿Debo Declarar Renta 2026? | MG Esp CP Mario Andrés Narváez Delgado</title>
+  <!-- CSS desde GitHub Pages -->
   <link rel="stylesheet" href="https://mariosand2026.github.io/consulta-declaracion-renta/style.css">
 </head>
 <body>
@@ -12,7 +13,7 @@
     <p><strong>Año gravable:</strong> 2025 | <strong>Topes DIAN 2026</strong></p>
     
     <form id="rentaForm">
-      <!-- ... (mismo HTML que antes) ... -->
+      <!-- ... (mismo formulario) ... -->
       <button type="submit">Verificar</button>
       <button type="button" id="btnPDF" disabled>📄 Generar Certificado PDF</button>
     </form>
@@ -23,11 +24,11 @@
   <footer>
     <p>Elaborado por: <strong>MG Esp CP Mario Andrés Narváez Delgado</strong><br>
     Contador Públicico | <a href="mailto:tu-email@ejemplo.com">Contacto</a></p>
-    <img src="logo.png" alt="Logo Contador" style="height: 50px;">
+    <img src="https://mariosand2026.github.io/consulta-declaracion-renta/logo.png" alt="Logo Contador" style="height: 50px;">
   </footer>
 
-  <!-- jsPDF desde GitHub Raw (¡Ajusta TU-USUARIO!) -->
-  <<script src="https://mariosand2026.github.io/consulta-declaracion-renta/jspdf.min.js"></script>
+  <!-- JS desde GitHub Pages -->
+  <script src="https://mariosand2026.github.io/consulta-declaracion-renta/jspdf.min.js"></script>
   <script src="https://mariosand2026.github.io/consulta-declaracion-renta/script.js"></script>
 </body>
 </html>
