--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
   <!-- Créditos del creador -->
   <footer>
     <p>Elaborado por: <strong>MG Esp CP Mario Andrés Narváez Delgado</strong><br>
-    Contador Públicico | <a href="mailto:tu-email@ejemplo.com">Contacto</a></p>
+    Contador Públicico | <a href="mailto:marioandresnarvaez@gmail.com">Contacto</a></p>
     <img src="logo.png" alt="Logo Contador" style="height: 50px;">
   </footer>
 
   <!-- jsPDF CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="script.js"></script>
+  <script src="https://mariosand2026.github.io/consulta-declaracion-renta/jspdf.min.js"></script>
+  <script src="https://mariosand2026.github.io/consulta-declaracion-renta/script.js"></script>
 </body>
 </html>
