--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>¿Debo Declarar Renta 2026? | MG Esp CP Mario Andrés Narváez Delgado</title>
-  <link rel="stylesheet" href="style.css">
+  <!-- CSS desde GitHub Pages (ruta absoluta) -->
+  <link rel="stylesheet" href="https://mariosand2026.github.io/consulta-declaracion-renta/style.css">
 </head>
 <body>
   <div class="container">
@@ -64,11 +65,12 @@
   <footer>
     <p>Elaborado por: <strong>MG Esp CP Mario Andrés Narváez Delgado</strong><br>
     Contador Públicico | <a href="mailto:marioandresnarvaez@gmail.com">Contacto</a></p>
-    <img src="logo.png" alt="Logo Contador" style="height: 50px;">
+    <img src="https://mariosand2026.github.io/consulta-declaracion-renta/logo.png" alt="Logo Contador" style="height: 50px;">
   </footer>
 
-  <!-- jsPDF CDN -->
+  <!-- jsPDF desde GitHub Pages (ruta absoluta) -->
   <script src="https://mariosand2026.github.io/consulta-declaracion-renta/jspdf.min.js"></script>
+  <!-- Script principal desde GitHub Pages (ruta absoluta) -->
   <script src="https://mariosand2026.github.io/consulta-declaracion-renta/script.js"></script>
 </body>
 </html>
