--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <button type="submit">Verificar</button>
-      <button type="button" id="btnPDF" disabled>📄 Generar Certificado PDF</button>
+      <button type="button" id="btnPDF">📄 Generar Certificado PDF</button>
     </form>
 
     <div id="resultado" class="resultado"></div>
