--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
 
   <!-- jsPDF desde GitHub Pages (ruta absoluta) -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <!-- Script principal desde GitHub Pages (ruta absoluta) -->
-  <script src="https://mariosand2026.github.io/consulta-declaracion-renta/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
