--- a/index.html
+++ b/index.html
@@ -63,52 +63,65 @@
 
     <!-- RESULTADO -->
     <div id="resultado" class="resultado"></div>
-  </div>
+    </div>
 
-  <div id="certificadoPDF" style="
+    <<div id="certificadoPDF" style="
   display:none;
-  width: 800px;
-  padding: 40px;
+  width:800px;
+  padding:50px;
   font-family: Arial, Helvetica, sans-serif;
-  color: #000;
+  color:#000;
+  position:relative;
+  background:white;
 ">
 
-  <h1 style="
-    text-align:center;
-    font-size:24px;
-    margin-bottom:10px;
+  <!-- MARCA DE AGUA -->
+  <div style="
+    position:absolute;
+    top:35%;
+    left:10%;
+    font-size:60px;
+    color:rgba(200,200,200,0.25);
+    transform:rotate(-30deg);
+    z-index:0;
+    pointer-events:none;
   ">
-    CERTIFICADO DE OBLIGACIÓN TRIBUTARIA
-  </h1>
+    CERTIFICADO
+  </div>
 
-  <hr style="margin-bottom:20px;">
+  <!-- CONTENIDO -->
+  <div style="position:relative; z-index:1;">
 
-  <p style="font-size:14px;">
-    <strong>NIT:</strong> <span id="pdfNit"></span>
-  </p>
+    <!-- LOGO -->
+    <div style="text-align:center; margin-bottom:20px;">
+      <img src="logo.png" alt="Logo" style="height:80px;">
+    </div>
 
-  <p style="font-size:14px;">
-    <strong>Resultado:</strong>
-    <span id="pdfResultado" style="font-weight:bold;"></span>
-  </p>
+    <h1 style="text-align:center; font-size:22px; margin-bottom:10px;">
+      CERTIFICADO DE OBLIGACIÓN TRIBUTARIA
+    </h1>
 
-  <p style="font-size:14px;">
-    <strong>Fecha límite:</strong> <span id="pdfFecha"></span>
-  </p>
+    <hr style="margin-bottom:25px;">
 
-  <br>
+    <p><strong>NIT:</strong> <span id="pdfNit"></span></p>
+    <p><strong>Resultado:</strong> <span id="pdfResultado"></span></p>
+    <p><strong>Fecha límite:</strong> <span id="pdfFecha"></span></p>
 
-  <p style="font-size:14px;"><strong>Motivos:</strong></p>
+    <br>
 
-  <ul id="pdfMotivos" style="font-size:13px; margin-left:20px;"></ul>
+    <p><strong>Motivos:</strong></p>
+    <ul id="pdfMotivos" style="margin-left:20px;"></ul>
 
-  <br><br><br>
+    <br><br>
 
-  <p style="font-size:13px;">
-    <strong>MG Esp CP Mario Andrés Narváez Delgado</strong><br>
-    Contador Público
-  </p>
+    <!-- FIRMA -->
+    <div style="margin-top:40px;">
+      <img src="firma.png" alt="Firma" style="height:70px;"><br>
+      <strong>MG Esp CP Mario Andrés Narváez Delgado</strong><br>
+      Contador Público
+    </div>
 
+  </div>
 </div>
 
   <!-- FOOTER -->
